View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0027425 | Open CASCADE | OCCT:Configuration | public | 2016-04-25 08:53 | 2016-12-09 16:37 |
Reporter | Assigned To | ||||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.0.0 | ||||
Target Version | 7.1.0 | Fixed in Version | 7.1.0 | ||
Summary | 0027425: Unable to build AIS package with OCCT_DEBUG enabled in current master | ||||
Description | Unable to build AIS package with OCCT_DEBUG enabled There are following errors: 1> AIS_LocalContext_1.cxx 1>..\..\..\src\AIS\AIS_LocalContext_1.cxx(1445): error C2065: 'mySelName' : undeclared identifier 1>..\..\..\src\AIS\AIS_LocalContext_1.cxx(1482): error C2065: 'mySelName' : undeclared identifier The problem has been introduced in the patch for the issue 0026886. | ||||
Steps To Reproduce | Build current master with OCCT_DEBUG enabled. | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
Branch CR27425 has been created by emv. SHA-1: 92788bf4bbc7d0189f9a5e9c776bfd310de17e60 Detailed log of new commits: Author: emv Date: Mon Apr 25 08:56:22 2016 +0300 0027425: Unable to build AIS package with OCCT_DEBUG enabled in current master The usage of the removed field mySelName of the AIS_LocalContext class has also been removed. |
|
Dear Marina, please review the git branch CR27425. |
|
Reviewed |
|
Branch CR27425 has been deleted by inv. SHA-1: 92788bf4bbc7d0189f9a5e9c776bfd310de17e60 |
occt: master 92788bf4 2016-04-25 05:56:22
|
0027425: Unable to build AIS package with OCCT_DEBUG enabled in current master The usage of the removed field mySelName of the AIS_LocalContext class has also been removed. |
Affected Issues 0027425 |
|
mod - src/AIS/AIS_LocalContext_1.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-04-25 08:53 |
|
New Issue | |
2016-04-25 08:53 |
|
Assigned To | => mpa |
2016-04-25 08:56 | git | Note Added: 0053528 | |
2016-04-25 08:59 |
|
Note Added: 0053529 | |
2016-04-25 08:59 |
|
Status | new => resolved |
2016-04-25 09:28 | mpa | Note Added: 0053530 | |
2016-04-25 09:28 | mpa | Assigned To | mpa => bugmaster |
2016-04-25 09:28 | mpa | Status | resolved => reviewed |
2016-04-25 10:55 |
|
Changeset attached | => occt master 92788bf4 |
2016-04-25 10:55 |
|
Assigned To | bugmaster => emv |
2016-04-25 10:55 |
|
Status | reviewed => verified |
2016-04-25 10:55 |
|
Resolution | open => fixed |
2016-05-20 12:22 | git | Note Added: 0054206 | |
2016-12-09 16:31 |
|
Status | verified => closed |
2016-12-09 16:37 |
|
Fixed in Version | => 7.1.0 |