0027425: Unable to build AIS package with OCCT_DEBUG enabled in current master

The usage of the removed field mySelName of the AIS_LocalContext class has also been removed.